[gd_scene load_steps=9 format=2]

[ext_resource path="res://player3.png" type="Texture" id=1]
[ext_resource path="res://StartTitle.gd" type="Script" id=2]
[ext_resource path="res://fellowcrossing.png" type="Texture" id=3]
[ext_resource path="res://player2.png" type="Texture" id=4]
[ext_resource path="res://player1.png" type="Texture" id=5]
[ext_resource path="res://player1Select.png" type="Texture" id=6]
[ext_resource path="res://player2Select.png" type="Texture" id=7]
[ext_resource path="res://player3Select.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2( 3.85714, 3.83333 )
color = Color( 0.486275, 0.603922, 0.741176, 1 )
polygon = PoolVector2Array( 0, 0, 336, 0, 336, 192, 0, 192 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.00135337
anchor_right = 1.0
anchor_bottom = 1.00135
margin_bottom = 2.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 641.0

[node name="Logo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1040.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FellowCrossing" type="TextureRect" parent="MarginContainer/VBoxContainer/Logo"]
margin_right = 1040.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 1040.0
margin_bottom = 367.0
size_flags_vertical = 3
alignment = 1

[node name="Name" type="CenterContainer" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 468.0
margin_right = 572.0
margin_bottom = 50.0

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Name/Name"]
margin_top = 13.0
margin_right = 104.0
margin_bottom = 37.0

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Name/Name/Name"]
margin_right = 42.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "NAME:"

[node name="EnterName" type="LineEdit" parent="MarginContainer/VBoxContainer/Name/Name/Name"]
margin_left = 46.0
margin_right = 104.0
margin_bottom = 24.0

[node name="Players" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 371.0
margin_right = 1040.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="P1" type="CenterContainer" parent="MarginContainer/VBoxContainer/Players"]
margin_right = 344.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1" type="TextureButton" parent="MarginContainer/VBoxContainer/Players/P1"]
margin_left = 112.0
margin_right = 232.0
margin_bottom = 136.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 2

[node name="P2" type="CenterContainer" parent="MarginContainer/VBoxContainer/Players"]
margin_left = 348.0
margin_right = 692.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2" type="TextureButton" parent="MarginContainer/VBoxContainer/Players/P2"]
margin_left = 113.0
margin_top = 1.0
margin_right = 231.0
margin_bottom = 135.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
stretch_mode = 3

[node name="P3" type="CenterContainer" parent="MarginContainer/VBoxContainer/Players"]
margin_left = 696.0
margin_right = 1040.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player3" type="TextureButton" parent="MarginContainer/VBoxContainer/Players/P3"]
margin_left = 113.0
margin_right = 230.0
margin_bottom = 135.0
keep_pressed_outside = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 8 )
stretch_mode = 3

[node name="StartGame" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 1040.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer/StartGame"]
margin_top = 11.0
margin_right = 1040.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Players/P1/Player1" to="." method="_on_Player1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Players/P2/Player2" to="." method="_on_Player2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Players/P3/Player3" to="." method="_on_Player3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGame/StartGame" to="." method="_on_StartGame_pressed"]
